<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addItem.AddItemFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost"
            android:checked="true" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found"
            android:layout_marginStart="16dp"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/field_background"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>